edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/tachograph/dd/v1/activity_change_info.proto";
import "wayplatform/connect/tachograph/dd/v1/specific_condition_record.proto";
import "wayplatform/connect/tachograph/dd/v1/vu_card_iw_record.proto";
import "wayplatform/connect/tachograph/dd/v1/vu_place_daily_work_period_record.proto";
import "wayplatform/connect/tachograph/security/v1/authentication.proto";

// Activities data for Generation 1 VU downloads.
//
// See Appendix 7, Section 2.2.6.3 (TREP 02 Hex).
//
// ASN.1 Definition:
//
//     VuActivitiesFirstGen ::= SEQUENCE {
//         timeReal TimeReal,
//         odometerValueMidnight OdometerValueMidnight,
//         vuCardIWData VuCardIWData,
//         vuActivityDailyData VuActivityDailyData,
//         vuPlaceDailyWorkPeriodData VuPlaceDailyWorkPeriodData,
//         vuSpecificConditionData VuSpecificConditionData,
//         signature SignatureFirstGen
//     }
message ActivitiesGen1 {
  // Date of the downloaded day.
  //
  // See Data Dictionary, Section 2.162, `TimeReal`.
  google.protobuf.Timestamp date_of_day = 1;

  // Odometer value at midnight in kilometers.
  //
  // See Data Dictionary, Section 2.114, `OdometerValueMidnight`.
  int32 odometer_midnight_km = 2;

  // Card insertion and withdrawal data.
  //
  // See Data Dictionary, Section 2.176, `VuCardIWData`.
  repeated dd.v1.VuCardIWRecord card_iw_data = 3;

  // Driver activity changes.
  //
  // See Data Dictionary, Section 2.170, `VuActivityDailyData`.
  repeated dd.v1.ActivityChangeInfo activity_changes = 4;

  // Daily work period place entries.
  //
  // See Data Dictionary, Section 2.218, `VuPlaceDailyWorkPeriodData`.
  // Each record contains both the card number and place information.
  repeated dd.v1.VuPlaceDailyWorkPeriodRecord place_records = 5;

  // Specific conditions data.
  //
  // See Data Dictionary, Section 2.227, `VuSpecificConditionData`.
  repeated dd.v1.SpecificConditionRecord specific_conditions = 6;

  // Signature for Gen1 data (RSA, 128 bytes).
  //
  // See Data Dictionary, Section 2.149, `Signature`.
  bytes signature = 7;

  // The raw, unparsed binary data of the complete Activities transfer value.
  // This field is preserved for data fidelity and lossless round-trips.
  // It includes all data structures and the embedded signature.
  bytes raw_data = 8;

  // Result of cryptographic signature authentication for this transfer.
  // Present when signature verification has been performed.
  tachograph.security.v1.Authentication authentication = 99;
}
